# chini-bench-cli

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
chini_bench/: __init__.py  __main__.py  api.py  cli.py  menu.py  prompt.py  runner.py
chini_bench/providers/: __init__.py  anthropic_p.py  common.py  google_p.py  ollama.py  openai_p.py  openrouter.py
scripts/: reflex_sweep.py
